OOZIE-688: POM file changes for oozie version 3.1.4 having Hadoop 23 support(Mona via Mohammad)
git-svn-id: https://svn.apache.org/repos/asf/incubator/oozie/branches/branch-3.1@1297915 13f79535-47bb-0310-9956-ffa450edef68